--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,18 +3,18 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Folders</ion-title>
+    <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">List</ion-title>
+      App Homepage
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    list here
+    <p>This is the app homepage</p>
   </div>
 </ion-content>
