--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -10,11 +10,20 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">List</ion-title>
+      <ion-title size="large">Lista</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    list here
+    <ion-list>
+      <ion-list-header lines="inset">
+        <ion-title>Inbox</ion-title>
+      </ion-list-header>
+      <ion-item *ngFor="let folder of folders" (click)="openFolder(folder.id)">
+        <ion-icon slot="start" [ios]="folder.icon + '-outline'" [md]="folder.icon + '-sharp'"></ion-icon>
+        <ion-label>{{ folder.name }}</ion-label>
+        <ion-badge slot="end">{{ folder.emails > 99 ? '99+' : folder.emails }}</ion-badge>
+      </ion-item>
+    </ion-list>
   </div>
 </ion-content>
