--- a/src/app/message/message.page.html
+++ b/src/app/message/message.page.html
@@ -1,9 +1,34 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>message</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Messaggi</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <ion-list>
+    <ion-list-header lines="inset">
+      <ion-title>Lista</ion-title>
+    </ion-list-header>
+    <ion-item-sliding *ngFor="let message of messages">
+      <ion-item (click)="openMessage(params.id, message.id)">
+        <ion-icon slot="start" [ios]="'person-outline'" [md]="'person-sharp'"></ion-icon>
+        <ion-title>{{ message.title }}</ion-title>
+        <ion-label>{{ message.text }}</ion-label>
+      </ion-item>
+      <ion-item-options side="start">
+        <ion-item-option (click)="delete(message.id)">Delete</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content>
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
