--- a/src/app/message/write.page.html
+++ b/src/app/message/write.page.html
@@ -44,7 +44,7 @@
             <ion-button type="submit"
               class="ladda-button"
               [ladda]="isLoading"
-              data-style="slide-right"
+              data-style="zoom-in"
               [disabled]="!model.title || !model.text">
               <span class="ladda-label">Invia</span>
               <span class="ladda-spinner"></span>
