--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,20 @@
   </ion-header>
 
   <div id="container">
-    <p>This is the app homepage</p>
+
+    <ion-row no-padding no-margin>
+      <ion-col></ion-col>
+      <ion-col>
+        <ion-button type="button" (click)="openScanner()">SCANNER</ion-button>
+      </ion-col>
+      <ion-col></ion-col>
+    </ion-row>
+    <ion-row no-padding no-margin>
+      <ion-col></ion-col>
+      <ion-col>
+        <ion-button type="button" (click)="openCamera()">CAMAERA</ion-button>
+      </ion-col>
+      <ion-col></ion-col>
+    </ion-row>
   </div>
 </ion-content>
